Songs endpoints added
